--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,25 @@
 {
     "name": "laravel/laravel",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "The skeleton application for the Laravel framework.",
+    "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
-        "fruitcake/laravel-cors": "^2.2.0",
-        "guywarner/laravel-google-chat-alerts": "^2.0",
-        "guzzlehttp/guzzle": "^7.4",
-        "laravel/framework": "^9.12",
-        "laravel/sanctum": "^2.15",
-        "laravel/tinker": "^2.7"
+        "php": "^8.1",
+        "guywarner/laravel-google-chat-alerts": "^2.1",
+        "guzzlehttp/guzzle": "^7.8",
+        "laravel/framework": "^10.37",
+        "laravel/sanctum": "^3.3",
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.19.0",
-        "laravel/sail": "^1.14.4",
-        "mockery/mockery": "^1.5.0",
-        "nunomaduro/collision": "^6.2",
-        "phpunit/phpunit": "^9.5.20",
-        "spatie/laravel-ignition": "^1.2"
+        "fakerphp/faker": "^1.23.0",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.26",
+        "mockery/mockery": "^1.6.6",
+        "nunomaduro/collision": "^7.10",
+        "phpunit/phpunit": "^10.5",
+        "spatie/laravel-ignition": "^2.3"
     },
     "autoload": {
         "psr-4": {
@@ -56,8 +56,12 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
+        }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
